--- a/views/data.ejs
+++ b/views/data.ejs
@@ -8,9 +8,7 @@
     <title>Cat Data</title>
 </head>
 <body>
-    <h4><a href="/">Home</a></h4>
-    <a href="/cats/felix"><img src="/images/cat1.jpg" alt="cat pic>"</a>
-    <a href="/cats/minka"><img src="/images/cat2.jpg" alt="cat pic>"</a>
-    <a href="/cats/gismo"><img src="/images/cat3.jpg" alt="cat pic>"</a>
+    <h1>Details Page for <%= name %></h1>
+    
 </body>
 </html>
