--- a/views/data.ejs
+++ b/views/data.ejs
@@ -8,7 +8,17 @@
     <title>Cat Data</title>
 </head>
 <body>
+    <h4><a href="/">Home</a>  <a href="/cats">Other cats</a></h4>
     <h1>Details Page for <%= name %></h1>
-    
+    <img src="<%=img %>" alt="cat pic">
+    <p>Favorite Food: <%= favorite_food %></p>
+    <p>Age: <%= age %></p>
+    <p>Favorite toys:</p>
+    <ul>
+    <% for (var x = 0; x <  toys.lenght; x++){ %>
+        <li><%= toys[x]%></li>
+    <%}%>
+    </ul>
+
 </body>
 </html>
