--- a/views/data.ejs
+++ b/views/data.ejs
@@ -10,7 +10,7 @@
 <body>
     <h4><a href="/">Home</a>  <a href="/cats">Other cats</a></h4>
     <h1>Details Page for <%= name %></h1>
-    <img src="<%=img %>" alt="cat pic">
+    <img src="<%= img %>">
     <p>Favorite Food: <%= favorite_food %></p>
     <p>Age: <%= age %></p>
     <p>Favorite toys:</p>
