--- a/views/data.ejs
+++ b/views/data.ejs
@@ -15,7 +15,7 @@
     <p>Age: <%= age %></p>
     <p>Favorite toys:</p>
     <ul>
-    <% for (var x = 0; x <  toys.lenght; x++){ %>
+    <% for (var x = 0; x <  toys.length; x++){ %>
         <li><%= toys[x]%></li>
     <%}%>
     </ul>
